[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
    "support/android/build-apk",
]

[replace]
"https://github.com/servo/webrender#0.11.0" = { path = '/Users/Paul/git/webrender/webrender/' }
"https://github.com/servo/webrender#webrender_traits:0.11.0" = { path = '/Users/Paul/git/webrender/webrender_traits/' }
