[workspace]
members = [
    "ports/servo",
    "ports/libsimpleservo/capi/",
    "ports/libsimpleservo/jniapi/",
    "ports/libmlservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
rust-webvr = { path = "../rust-webvr/rust-webvr/" }
rust-webvr-api = { path = "../rust-webvr/rust-webvr-api/" }
servo-skia = { path = "../skia/" }
glutin = { path = "../glutin/glutin/" }
winit = { path = "../winit/" }
glutin_gles2_sys = { path = "../glutin/glutin_gles2_sys/" }
glutin_glx_sys = { path = "../glutin/glutin_glx_sys/" }
glutin_egl_sys = { path = "../glutin/glutin_egl_sys/" }
glutin_wgl_sys = { path = "../glutin/glutin_wgl_sys/" }
glx = { path = "../rust-glx/" }
offscreen_gl_context = { path = "../rust-offscreen-rendering-context/" }
